Корректировка интерфейса аналитики
